tests/error/union_invalid.gw
// [contains] in union declaration.
 union
{
  one; two;
};
